--- a/client/app/chat/contacts/contacts.html
+++ b/client/app/chat/contacts/contacts.html
@@ -18,9 +18,9 @@
         <p flex>{{room.members[0].name}}</p>
         <md-icon ng-class="{'md-primary':!room.newMessage,'md-accent':room.newMessage}" >messenger</md-icon>
       </div>
-
       <md-divider></md-divider>
     </md-list-item>
+    <md-divider></md-divider>
   </md-list>
 </md-content>
 
@@ -46,6 +46,8 @@
       <md-icon  ng-class="{'md-primary':!group.newMessage,'md-accent':group.newMessage}" >messenger</md-icon>
       <md-divider></md-divider>
     </md-list-item>
+
+    <md-divider></md-divider>
   </md-list>
 </md-content>
 
