--- a/client/app/chat/information/information.html
+++ b/client/app/chat/information/information.html
@@ -31,7 +31,7 @@
 <md-toolbar ng-if="ICtrl.selection" class="md-accent" layout="row" layout-align="center center">
   Room
 </md-toolbar>
-  <md-card ng-if="ICtrl.selection">
+  <md-card ng-if="ICtrl.selection" style="height:110px">
     <!--<img  ng-src="/assets/images/config.jpg"  class="md-card-image" alt="Washed Out">-->
     <md-card-header>
       <md-card-avatar>
