--- a/client/app/chat/pendings/pendings.html
+++ b/client/app/chat/pendings/pendings.html
@@ -9,6 +9,6 @@
   </md-list>
 </md-content>
 <md-content ng-if="!vm.pendings.length">
-  There are no pending friend's requests
+  All your request are already accepted
 </md-content>
 
