--- a/client/app/chat/request/request.html
+++ b/client/app/chat/request/request.html
@@ -10,6 +10,6 @@
   </md-list>
 </md-content>
 <md-content ng-if="!vm.requests.length">
-  All your request are already accepted
+  There are no pending friend's requests
 </md-content>
 
